feat(i18n): bags seal page translation

--- a/src/app/pages/bags-seal/bags-seal.page.html
+++ b/src/app/pages/bags-seal/bags-seal.page.html
@@ -4,7 +4,7 @@
             <ion-back-button [text]="''" color="light" icon="chevron-back" defaultHref="/"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            Sigilare saci
+            {{ 'Home.Options.BagsSeal' | translate }}
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -12,26 +12,26 @@
 <ion-content [fullscreen]="true">
     <div class="seal__content">
         <div class="seal__category">
-            <h1>Alege categoria de sigilare</h1>
+            <h1>{{ 'BagsSeal.ChooseCategory' | translate }}</h1>
             <ion-radio-group [(ngModel)]="selectedCategory" (ngModelChange)="resetForm()">
-                <ion-radio value="1">Plastic</ion-radio>
-                <ion-radio value="2">Aluminiu</ion-radio>
-                <ion-radio value="3">Sticla</ion-radio>
+                <ion-radio value="1">{{ 'Home.Plastic' | translate }}</ion-radio>
+                <ion-radio value="2">{{ 'Home.Aluminium' | translate }}</ion-radio>
+                <ion-radio value="3">{{ 'Home.Glass' | translate }}</ion-radio>
             </ion-radio-group>
         </div>
 
         <ng-container *ngIf="selectedCategory">
             <ion-item>
                 <ng-container *ngIf="selectedCategory === '1'; else aluminium">
-                    <ion-input inputmode="number" label="Cantitate de sigilare" label-placement="stacked" type="number" required spellcheck="false" placeholder="Introdu cantitatea de sigilare" [(ngModel)]="plasticQuantity"></ion-input>
+                    <ion-input inputmode="number" label="{{ 'BagsSeal.Quantity' | translate }}" label-placement="stacked" type="number" required spellcheck="false" placeholder="{{ 'BagsSeal.QuantityPlaceholder' | translate }}" [(ngModel)]="plasticQuantity"></ion-input>
                 </ng-container>
                 <ng-template #aluminium>
                     <ng-container *ngIf="selectedCategory === '2'; else glass">
-                        <ion-input inputmode="number" label="Cantitate de sigilare" label-placement="stacked" type="number" required spellcheck="false" placeholder="Introdu cantitatea de sigilare" [(ngModel)]="aluminiumQuantity"></ion-input>
+                        <ion-input inputmode="number" label="{{ 'BagsSeal.Quantity' | translate }}" label-placement="stacked" type="number" required spellcheck="false" placeholder="{{ 'BagsSeal.QuantityPlaceholder' | translate }}" [(ngModel)]="aluminiumQuantity"></ion-input>
                     </ng-container>
                 </ng-template>
                 <ng-template #glass>
-                    <ion-input inputmode="number" label="Cantitate de sigilare" label-placement="stacked" type="number" required spellcheck="false" placeholder="Introdu cantitatea de sigilare" [(ngModel)]="glassQuantity"></ion-input>
+                    <ion-input inputmode="number" label="{{ 'BagsSeal.Quantity' | translate }}" label-placement="stacked" type="number" required spellcheck="false" placeholder="{{ 'BagsSeal.QuantityPlaceholder' | translate }}" [(ngModel)]="glassQuantity"></ion-input>
                 </ng-template>
                 <ion-icon name="bag-outline" slot="end"></ion-icon>
             </ion-item>
@@ -41,7 +41,7 @@
                     <ion-spinner name="lines"></ion-spinner>
                 </ng-container>
                 <ng-template #seal_bag>
-                    Sigilează sacul
+                    {{ 'BagsSeal.Seal' | translate }}
                 </ng-template>
             </ion-button>
         </ng-container>
