feat(i18n): packaging page translation

--- a/src/app/pages/packaging/packaging.page.html
+++ b/src/app/pages/packaging/packaging.page.html
@@ -4,7 +4,7 @@
             <ion-back-button [text]="''" color="light" icon="chevron-back" defaultHref="/"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            Ridicare ambalaje
+            {{ 'Home.Options.Pickup' | translate }}
         </ion-title>
     </ion-toolbar>
 </ion-header>
