--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -4,7 +4,7 @@
             <ion-back-button [text]="''" color="light" icon="chevron-back" defaultHref="/"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            Setări
+            {{ 'Home.Options.Settings' | translate }}
         </ion-title>
     </ion-toolbar>
 </ion-header>
