--- a/src/app/pages/scan/scan.page.html
+++ b/src/app/pages/scan/scan.page.html
@@ -42,21 +42,21 @@
                     <div class="scan__top__item">
                         <ion-icon src="../../../assets/icon/plastic-bottle.svg" slot="start"></ion-icon>
                         <div>
-                            <h1>Plastic</h1>
+                            <h1>{{ 'Home.Plastic' | translate }}</h1>
                             <p>x{{ getItemsCount(1) }}</p>
                         </div>
                     </div>
                     <div class="scan__top__item">
                         <ion-icon src="../../../assets/icon/can.svg" slot="start"></ion-icon>
                         <div>
-                            <h1>Aluminiu</h1>
+                            <h1>{{ 'Home.Aluminium' | translate }}</h1>
                             <p>x{{ getItemsCount(2) }}</p>
                         </div>
                     </div>
                     <div class="scan__top__item">
                         <ion-icon src="../../../assets/icon/glass.svg" slot="start"></ion-icon>
                         <div>
-                            <h1>Sticla</h1>
+                            <h1>{{ 'Home.Glass' | translate }}</h1>
                             <p>x{{ getItemsCount(3) }}</p>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
             </div>
 
             <ion-button class="scan__add" fill="solid" color="primary" *ngIf="currentVoucher.state !== 1" (click)="tryScanBarCode()" [disabled]="!isSupported">
-                Scanează
+                {{ 'NewVoucher.Scan' | translate }}
                 <ion-icon slot="end" name="scan-circle"></ion-icon>
             </ion-button>
         </div>
@@ -108,27 +108,27 @@
 
             <form [formGroup]="registerProduct">
                 <div class="register__product__image" *ngFor="let registerProductImage of registerProductImages; let i = index;">
-                    <h1>Poză {{ i + 1 }}</h1>
+                    <h1>{{ 'NewVoucher.NewProductBottom.Picture' | translate }} {{ i + 1 }}</h1>
                     <ion-button [color]="registerProductImage.length > 0 ? 'danger' : 'primary'" (click)="markAction(i)">
                         <ion-icon slot="icon-only" [name]="registerProductImage.length > 0 ? 'close-circle' : 'camera'"></ion-icon>
                     </ion-button>
                 </div>
                 <ion-item>
-                    <ion-input inputmode="text" label="Nume produs" formControlName="name" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu numele ambalajului"></ion-input>
+                    <ion-input inputmode="text" label="{{ 'NewVoucher.NewProductBottom.Name' | translate }}" formControlName="name" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'NewVoucher.NewProductBottom.NamePlaceholder' | translate }}"></ion-input>
                     <ion-icon name="pricetag-outline" slot="end"></ion-icon>
                 </ion-item>
                 <ion-item>
-                    <ion-input inputmode="text" label="Cantitate produs" formControlName="volume" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu cantitatea ambalajului (ex: 500mL)"></ion-input>
+                    <ion-input inputmode="text" label="{{ 'NewVoucher.NewProductBottom.Quantity' | translate }}" formControlName="volume" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'NewVoucher.NewProductBottom.QuantityPlaceholder' | translate }}"></ion-input>
                     <ion-icon name="cube-outline" slot="end"></ion-icon>
                 </ion-item>
                 <ion-radio-group formControlName="productCategoryId">
-                    <ion-radio value="1">Plastic</ion-radio>
-                    <ion-radio value="2">Aluminiu</ion-radio>
-                    <ion-radio value="3">Sticla</ion-radio>
+                    <ion-radio value="1">{{ 'Home.Plastic' | translate }}</ion-radio>
+                    <ion-radio value="2">{{ 'Home.Aluminium' | translate }}</ion-radio>
+                    <ion-radio value="3">{{ 'Home.Glass' | translate }}</ion-radio>
                 </ion-radio-group>
 
                 <ion-button class="register__product__button" fill="solid" color="primary" (click)="registerNewProduct()" [disabled]="!canRegisterNewProduct()">
-                    Înregistrează
+                    {{ 'NewVoucher.NewProductBottom.Register' | translate }}
                 </ion-button>
             </form>
         </div>
