--- a/src/app/pages/bags-history/bags-history.page.scss
+++ b/src/app/pages/bags-history/bags-history.page.scss
@@ -34,6 +34,8 @@ ion-content {
                         display: flex;
                         flex-direction: column;
                         align-items: flex-end;
+                        gap: 2px;
+                        margin-inline-start: 5px;
 
                         ion-badge {
                             --padding-bottom: 4px;
@@ -53,7 +55,7 @@ ion-content {
                     ion-icon {
                         margin: 0;
                         margin-right: 15px;
-                        opacity: .7;
+                        opacity: 0.7;
                     }
 
                     ion-label {
