--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -120,12 +120,13 @@ ion-content {
         }
 
         .primary {
-            min-height: 120px;
-            padding: 12px;
-            font-size: 32px;
+            min-height: 90px;
+            font-size: 36px;
+            text-transform: none;
             letter-spacing: -0.7px;
-            --border-radius: 10px;
+            --border-radius: 24px 24px 0px 0px;
             font-weight: 500;
+            margin: 0;
         }
     }
 }
