--- a/src/app/pages/voucher-history/voucher-history.page.scss
+++ b/src/app/pages/voucher-history/voucher-history.page.scss
@@ -39,6 +39,8 @@ ion-content {
                             display: flex;
                             flex-direction: column;
                             align-items: flex-end;
+                            gap: 2px;
+                            margin-inline-start: 5px;
 
                             ion-badge {
                                 --padding-bottom: 4px;
@@ -80,7 +82,6 @@ ion-content {
                         color: var(--ion-color-dark);
                     }
                 }
-
             }
         }
 
