--- a/src/app/pages/packaging/packaging.page.scss
+++ b/src/app/pages/packaging/packaging.page.scss
@@ -9,3 +9,89 @@
         }
     }
 }
+
+ion-content {
+    .packaging__content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .packaging__wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding: 20px;
+
+            h1 {
+                margin: 0;
+                font-size: 22px;
+                font-weight: 500;
+            }
+
+            .packaging__list {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 16px;
+                justify-content: center;
+                align-items: center;
+
+                .active__item {
+                    border-color: rgba(var(--ion-color-success-rgb), 0.7) !important;
+                }
+
+                .packaging__item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    background: linear-gradient(271deg, rgba(153, 38, 247, 0.2) 2.62%, rgba(0, 0, 0, 0.08) 96.83%);
+                    padding: 16px;
+                    border-radius: 8px;
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                    text-align: center;
+                    border: 1px solid transparent;
+                    gap: 10px;
+                    position: relative;
+                    overflow: hidden;
+
+                    h1 {
+                        font-size: 15px;
+                        font-weight: 500;
+                        margin: 0;
+                    }
+
+                    .bag__count {
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+
+                        ion-icon {
+                            margin: 0;
+                            opacity: 0.7;
+                            font-size: 22px;
+                        }
+
+                        p {
+                            font-size: 16px;
+                            font-weight: 300;
+                            margin: 0;
+                        }
+                    }
+                }
+            }
+
+            ion-button {
+                min-height: 70px;
+                font-size: 28px;
+                letter-spacing: -0.4px;
+                text-transform: none;
+                --border-radius: 0;
+                font-weight: 500;
+                margin: 0;
+                width: 100%;
+            }
+        }
+    }
+}
