--- a/src/app/pages/bags-seal/bags-seal.page.html
+++ b/src/app/pages/bags-seal/bags-seal.page.html
@@ -11,6 +11,40 @@
 
 <ion-content [fullscreen]="true">
     <div class="seal__content">
+
+        @if(currentUser) {
+            <div class="seal__items">
+                <div class="seal__item">
+                    <ion-icon src="../../../assets/icon/plastic-bottle.svg" slot="start"></ion-icon>
+                    <div>
+                        <h1>{{ 'Home.Plastic' | translate }}</h1>
+                        <p [ngClass]="{'seal-orange': currentUser.PlasticCount === currentUser.PlasticThreshold, 'seal-red': currentUser.PlasticCount > currentUser.PlasticThreshold }">
+                            {{ currentUser.PlasticCount }} / {{ currentUser.PlasticThreshold }}
+                        </p>
+                    </div>
+                </div>
+                <div class="seal__item">
+                    <ion-icon src="../../../assets/icon/can.svg" slot="start"></ion-icon>
+                    <div>
+                        <h1>{{ 'Home.Aluminium' | translate }}</h1>
+                        <p [ngClass]="{'seal-orange': currentUser.AluminiumCount === currentUser.AluminiumThreshold, 'seal-red': currentUser.AluminiumCount > currentUser.AluminiumThreshold }">
+                            {{ currentUser.AluminiumCount }} / {{ currentUser.AluminiumThreshold }}
+                        </p>
+                    </div>
+                </div>
+                <div class="seal__item">
+                    <ion-icon src="../../../assets/icon/glass.svg" slot="start"></ion-icon>
+                    <div>
+                        <h1>{{ 'Home.Glass' | translate }}</h1>
+                        <p [ngClass]="{'seal-orange': currentUser.GlassCount === currentUser.GlassThreshold, 'seal-red': currentUser.GlassCount > currentUser.GlassThreshold }">
+                            {{ currentUser.GlassCount }} / {{ currentUser.GlassThreshold }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+
+
         <div class="seal__category">
             <h1>{{ 'BagsSeal.ChooseCategory' | translate }}</h1>
             <ion-radio-group [(ngModel)]="selectedCategory" (ngModelChange)="resetForm()">
