--- a/src/app/pages/bags-seal/bags-seal.page.scss
+++ b/src/app/pages/bags-seal/bags-seal.page.scss
@@ -19,6 +19,54 @@ ion-content {
         gap: 10px;
         padding: 20px;
 
+        .seal__items {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: linear-gradient(271deg, rgba(153, 38, 247, 0.2) 2.62%, rgba(0, 0, 0, 0.08) 96.83%);
+            padding: 10px 20px;
+            border-radius: 12px;
+
+            .seal__item {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                ion-icon {
+                    font-size: 24px;
+                    opacity: 0.5;
+                }
+
+                h1 {
+                    margin: 0;
+                    font-size: 18px;
+                    font-weight: 500;
+                    letter-spacing: -0.3px;
+                }
+
+                .seal-orange {
+                    background: var(--ion-color-warning);
+                    padding: 0 10px;
+                    border-radius: 8px;
+                    color: black !important;
+                }
+
+                .seal-red {
+                    background: var(--ion-color-danger);
+                    padding: 0 10px;
+                    border-radius: 8px;
+                    color: whitesmoke !important;
+                }
+
+                p {
+                    margin: 0;
+                    font-size: 16px;
+                    font-weight: 300;
+                    color: black;
+                }
+            }
+        }
+
         .seal__category {
             display: flex;
             flex-direction: column;
@@ -66,7 +114,5 @@ ion-content {
                 color: rgb(0 0 0 / 20%);
             }
         }
-
-
     }
 }
