chore: cleanup some unused code

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -120,10 +120,10 @@ ion-content {
         }
 
         .primary {
-            min-height: 90px;
-            font-size: 36px;
-            text-transform: none;
-            letter-spacing: -0.7px;
+            min-height: 80px;
+            font-size: 28px;
+            text-transform: capitalize;
+            letter-spacing: -0.4px;
             --border-radius: 24px 24px 0px 0px;
             font-weight: 500;
             margin: 0;
