--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -17,55 +17,60 @@
     </ng-container>
     <ng-template #show_settings>
         <div class="settings__content">
-            <ion-list *ngIf="currentSettings" lines="none">
-                <ion-item button (click)="chooseLanguage()">
-                    <ion-avatar aria-hidden="true" slot="end" *ngIf="currentLanguage">
-                        <img alt="Flag" [src]="'./assets/flags/' + currentLanguage + '.svg'" />
-                    </ion-avatar>
-                    <ion-label>
-                        <h3>{{ 'Settings.Language.Title' | translate }}</h3>
-                        <p>{{ 'Settings.Language.Subtitle' | translate }}</p>
-                    </ion-label>
-                </ion-item>
-                <ion-item button>
-                    <ion-toggle [checked]="currentSettings.AllowNotifications" (ionChange)="notifications($event)">
+            @if(currentSettings) {
+                <ion-list lines="none">
+                    <ion-item button (click)="chooseLanguage()">
+                        <ion-avatar aria-hidden="true" slot="end" *ngIf="currentLanguage">
+                            <img alt="Flag" [src]="'./assets/flags/' + currentLanguage + '.svg'" />
+                        </ion-avatar>
                         <ion-label>
-                            <h3>{{ 'Settings.Notifications.Title' | translate }}</h3>
-                            <p>{{ 'Settings.Notifications.Subtitle' | translate }}</p>
+                            <h3>{{ 'Settings.Language.Title' | translate }}</h3>
+                            <p>{{ 'Settings.Language.Subtitle' | translate }}</p>
                         </ion-label>
-                    </ion-toggle>
-                </ion-item>
+                    </ion-item>
+                    <ion-item button>
+                        <ion-toggle [checked]="currentSettings.AllowNotifications" (ionChange)="notifications($event)">
+                            <ion-label>
+                                <h3>{{ 'Settings.Notifications.Title' | translate }}</h3>
+                                <p>{{ 'Settings.Notifications.Subtitle' | translate }}</p>
+                            </ion-label>
+                        </ion-toggle>
+                    </ion-item>
 
-                <ion-item mode="ios">
-                    <ion-input inputmode="text" [(ngModel)]="currentSettings.Header" label="{{ 'Settings.Header.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Header.Placeholder' | translate }}" fill="solid"></ion-input>
-                    <ion-icon name="person" slot="end"></ion-icon>
-                </ion-item>
+                    <ion-item mode="ios">
+                        <ion-input inputmode="text" [(ngModel)]="currentSettings.Header" label="{{ 'Settings.Header.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Header.Placeholder' | translate }}" fill="solid"></ion-input>
+                        <ion-icon name="person" slot="end"></ion-icon>
+                    </ion-item>
 
-                <ion-item mode="ios">
-                    <ion-input inputmode="text" [(ngModel)]="currentSettings.Subheader" label="{{ 'Settings.SubHeader.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubHeader.Placeholder' | translate }}" fill="solid"></ion-input>
-                    <ion-icon name="person" slot="end"></ion-icon>
-                </ion-item>
+                    <ion-item mode="ios">
+                        <ion-input inputmode="text" [(ngModel)]="currentSettings.Subheader" label="{{ 'Settings.SubHeader.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubHeader.Placeholder' | translate }}" fill="solid"></ion-input>
+                        <ion-icon name="person" slot="end"></ion-icon>
+                    </ion-item>
 
-                <ion-item mode="ios">
-                    <ion-input inputmode="text" [(ngModel)]="currentSettings.Footer" label="{{ 'Settings.Footer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Footer.Placeholder' | translate }}" fill="solid"></ion-input>
-                    <ion-icon name="person" slot="end"></ion-icon>
-                </ion-item>
+                    <ion-item mode="ios">
+                        <ion-input inputmode="text" [(ngModel)]="currentSettings.Footer" label="{{ 'Settings.Footer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Footer.Placeholder' | translate }}" fill="solid"></ion-input>
+                        <ion-icon name="person" slot="end"></ion-icon>
+                    </ion-item>
 
-                <ion-item mode="ios">
-                    <ion-input inputmode="text" [(ngModel)]="currentSettings.Subfooter" label="{{ 'Settings.SubFooter.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubFooter.Placeholder' | translate }}" fill="solid"></ion-input>
-                    <ion-icon name="person" slot="end"></ion-icon>
-                </ion-item>
+                    <ion-item mode="ios">
+                        <ion-input inputmode="text" [(ngModel)]="currentSettings.Subfooter" label="{{ 'Settings.SubFooter.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubFooter.Placeholder' | translate }}" fill="solid"></ion-input>
+                        <ion-icon name="person" slot="end"></ion-icon>
+                    </ion-item>
 
-                <ion-item mode="ios">
-                    <ion-input inputmode="text" [(ngModel)]="currentSettings.PrinterIdentifier" label="{{ 'Settings.Printer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Printer.Placeholder' | translate }}" fill="solid"></ion-input>
-                    <ion-icon name="person" slot="end"></ion-icon>
-                </ion-item>
-            </ion-list>
+                    <ion-item mode="ios">
+                        <ion-input inputmode="text" [(ngModel)]="currentSettings.PrinterIdentifier" label="{{ 'Settings.Printer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Printer.Placeholder' | translate }}" fill="solid"></ion-input>
+                        <ion-icon name="person" slot="end"></ion-icon>
+                    </ion-item>
+                </ion-list>
 
-            <ion-button fill="solid" color="primary" (click)="saveDetails()">
-                {{ 'Settings.Save' | translate }}
-                <ion-icon slot="end" name="checkmark-done"></ion-icon>
-            </ion-button>
+                <ion-button fill="solid" color="primary" (click)="saveDetails()">
+                    {{ 'Settings.Save' | translate }}
+                    <ion-icon slot="end" name="checkmark-done"></ion-icon>
+                </ion-button>
+            }
+
+
+
         </div>
 
     </ng-template>
