fix(print): try catch when printer is off

--- a/src/app/pages/voucher-history/voucher-history.page.scss
+++ b/src/app/pages/voucher-history/voucher-history.page.scss
@@ -60,8 +60,7 @@ ion-content {
                         ion-icon {
                             margin: 0;
                             margin-right: 15px;
-                            color: var(--ion-color-primary);
-                            opacity: 0.5;
+                            // color: var(--ion-color-primary);
                         }
 
                         ion-label {
