--- a/src/app/pages/bags-seal/bags-seal.page.scss
+++ b/src/app/pages/bags-seal/bags-seal.page.scss
@@ -24,7 +24,7 @@ ion-content {
             align-items: center;
             justify-content: space-between;
             background: linear-gradient(271deg, rgba(153, 38, 247, 0.2) 2.62%, rgba(0, 0, 0, 0.08) 96.83%);
-            padding: 10px 20px;
+            padding: 10px;
             border-radius: 12px;
 
             .seal__item {
