--- a/src/app/pages/voucher-history/voucher-history.page.scss
+++ b/src/app/pages/voucher-history/voucher-history.page.scss
@@ -89,7 +89,7 @@ ion-content {
             font-size: 28px;
             letter-spacing: -0.4px;
             text-transform: capitalize;
-            --border-radius: 0;
+            --border-radius: 24px 24px 0px 0px;
             font-weight: 500;
             position: absolute;
             bottom: 0px;
