--- a/src/app/pages/scan/scan.page.scss
+++ b/src/app/pages/scan/scan.page.scss
@@ -98,6 +98,7 @@ ion-content {
                     ion-icon {
                         margin: 0;
                         margin-right: 10px;
+                        opacity: 0.5;
                     }
 
                     ion-label {
