--- a/src/app/pages/settings/settings.page.scss
+++ b/src/app/pages/settings/settings.page.scss
@@ -76,6 +76,13 @@ ion-content {
             --border-radius: 10px;
             font-weight: 500;
             text-transform: none;
+            margin: 0;
+        }
+
+        .app_version {
+            font-weight: 400;
+            opacity: 0.5;
+            font-size: 14px;
         }
     }
 
