--- a/src/app/pages/bags-history/bags-history.page.html
+++ b/src/app/pages/bags-history/bags-history.page.html
@@ -26,7 +26,7 @@
                         <ion-icon [src]="'../../../assets/icon/' + getFormattedType(bag.Category) + '.svg'" slot="start"></ion-icon>
                         <ion-label>
                             <h3>{{ bag.Code }}</h3>
-                            <p>x{{ bag.Count }}</p>
+                            <p>x{{ bag.Count }} - <b>{{ bag.SealCode }}</b></p>
                         </ion-label>
                         <div class="history__end" slot="end">
                             <ion-badge slot="end" [color]="getBagStateColor(bag.State)">
