feat(permission): welcome page with check bluetooth permissions

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -39,27 +39,27 @@
 
                     <ion-item mode="ios">
                         <ion-input inputmode="text" [(ngModel)]="currentSettings.Header" label="{{ 'Settings.Header.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Header.Placeholder' | translate }}" fill="solid"></ion-input>
-                        <ion-icon name="person" slot="end"></ion-icon>
+                        <ion-icon name="reorder-four" slot="end"></ion-icon>
                     </ion-item>
 
                     <ion-item mode="ios">
                         <ion-input inputmode="text" [(ngModel)]="currentSettings.Subheader" label="{{ 'Settings.SubHeader.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubHeader.Placeholder' | translate }}" fill="solid"></ion-input>
-                        <ion-icon name="person" slot="end"></ion-icon>
+                        <ion-icon name="reorder-three" slot="end"></ion-icon>
                     </ion-item>
 
                     <ion-item mode="ios">
                         <ion-input inputmode="text" [(ngModel)]="currentSettings.Footer" label="{{ 'Settings.Footer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Footer.Placeholder' | translate }}" fill="solid"></ion-input>
-                        <ion-icon name="person" slot="end"></ion-icon>
+                        <ion-icon name="reorder-two" slot="end"></ion-icon>
                     </ion-item>
 
                     <ion-item mode="ios">
                         <ion-input inputmode="text" [(ngModel)]="currentSettings.Subfooter" label="{{ 'Settings.SubFooter.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.SubFooter.Placeholder' | translate }}" fill="solid"></ion-input>
-                        <ion-icon name="person" slot="end"></ion-icon>
+                        <ion-icon name="remove" slot="end"></ion-icon>
                     </ion-item>
 
                     <ion-item mode="ios">
                         <ion-input inputmode="text" [(ngModel)]="currentSettings.PrinterIdentifier" label="{{ 'Settings.Printer.Title' | translate }}" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Settings.Printer.Placeholder' | translate }}" fill="solid"></ion-input>
-                        <ion-icon name="person" slot="end"></ion-icon>
+                        <ion-icon name="print" slot="end"></ion-icon>
                     </ion-item>
                 </ion-list>
 
